# CoreGear

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  orch.sh  pyproject.toml
.github/workflows/: ci.yml
conan/: clang.txt
coregear/: CMakeLists.txt
coregear/common/: CMakeLists.txt  char_bits.mpp  char_bits_impl.mpp  common.mpp
coregear/fsim/: CMakeLists.txt
coregear/fsim/memory/: CMakeLists.txt  memory.mpp
coregear/fsim/riscv/: CMakeLists.txt  extensions.mpp  main.cpp  regs.mpp  riscv.cpp  riscv.mpp  riscv.test.cpp
coregear/fsim/sim/: CMakeLists.txt  sim.mpp
coregear/utility/: CMakeLists.txt  assert.hpp  assert.mpp  logger.mpp  unreachable.hpp  unreachable.mpp  utility.mpp
include/coregear/: assert.hpp  exceptions.hpp  extensions.hpp  logger.hpp  memory.hpp  regs.hpp  riscv_sim.hpp  sim.hpp
include/coregear-c/: coregear.h  utils.h
include/prs/: assert.hpp  exceptions.hpp  extensions.hpp  logger.hpp  memory.hpp  regs.hpp  riscv_sim.hpp  sim.hpp
include/prs-c/: prs.h  utils.h
lib/: CMakeLists.txt  extensions.cpp  riscv_sim.cpp  sim.cpp
test/: CMakeLists.txt
tools/: CMakeLists.txt  coregear.cpp  prs.cpp
